# gfwlist2x

./: .gitignore  LICENSE  README.md  gfwlist2x.cabal
app/: Main.hs
src/GFW/: Args.hs  Parser.hs  Types.hs
src/GFW/Converters/: DNSMasq.hs
