name:                gfwlist2x
version:             0.1.0.0
description:         A tool convert gfwlist.txt to x
homepage:            https://github.com/jimmyhuco/gfwlist2x#readme
license:             BSD3
license-file:        LICENSE
author:              Jimmy Hu
maintainer:          jimmyhu.co@gmail.com
copyright:           2017 Jimmy Hu
category:            Command Line
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GFW.Types
                     , GFW.Parser
                     , GFW.Args
                     , GFW.Converters.DNSMasq
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , mtl
                     , optparse-applicative
  default-language:    Haskell2010

executable gfwlist2x
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gfwlist2x
                     , bytestring
                     , base64-bytestring
                     , http-client
                     , http-client-tls
  default-language:    Haskell2010

test-suite gfwlist2x-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gfwlist2x
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jimmyhuco/gfwlist2x
